# RocoLang

./: Cargo.toml  README.md  build.rs  package.json
.husky/: pre-commit
examples/: basic.rs  error_handling.rs
rocolib/: combat.rhai  role.rhai  spirit.rhai
scripts/: generate-stdlib-metadata.ps1
src/: builtin_sources.rs  debugger.rs  engine.rs  error.rs  language_service.rs  lib.rs  rocolib.rs  stdlib.rs  types.rs
src/engine/: debug.rs  mod.rs  registration.rs  script_error.rs
src/engine/script_error/: eval.rs  mod.rs  parse.rs
src/error/: classification.rs  invalid_param.rs  mod.rs  rejection.rs  script.rs  top_level.rs
src/error/classification/: detail_accessors.rs  mod.rs
src/error/network/: bridge.rs  kind.rs  mod.rs  protocol_parse.rs  response_parse.rs
src/error/rhai/: activity.rs  bridge.rs  classification.rs  mod.rs  (+11 more)
src/language_service/: metadata.rs  semantic.rs
src/stdlib/: combat.rs  combat_result.rs  combat_status.rs  four_seasons.rs  game.rs  ice_crystal.rs  libra.rs  lookup.rs  manor.rs  memory.rs  mod.rs  pisces.rs  profile.rs  registration.rs  remote_state.rs  role.rs  scene.rs  scorpio.rs  session.rs  spirit.rs  star_tower.rs  summon.rs  system.rs  task.rs  three_starters.rs  treasure_realm.rs  util.rs  virgo.rs
src/types/: action.rs  combat.rs  common.rs  friend.rs  game.rs  home.rs  incubative_machine.rs  jump_machine.rs  ladder.rs  manor.rs  news.rs  pet_egg.rs  pet_training.rs  play_guide.rs  profile.rs  remote_state.rs  scene.rs  spirit.rs  spirit_book.rs  star_tower.rs  static_data.rs  task.rs
tests/: rocolib_import.rs
(+286 files in other folders)
