[package]
name = "roco-lang"
version = "0.1.0"
edition = "2021"
authors = ["RocoAI Team"]
description = "Rhai-based scripting language for Roco Kingdom automated testing"
license = "MIT"

[dependencies]
rhai = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
